@startuml UEORMS_ER_HR_and_Payroll
left to right direction
hide circle
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho
skinparam ArrowColor #444444
skinparam ArrowThickness 1
skinparam defaultFontName Arial
skinparam class {
  BackgroundColor #FFFFFF
  HeaderBackgroundColor #D9D9D9
  BorderColor #666666
  FontColor #111111
  AttributeFontColor #111111
  StereotypeFontColor #333333
}

title UEORMS ER Diagram - HR and Payroll




package "HR and Payroll" {
  class Attendance {
  - id : String <<PK>>
  - tenantId : String
  - employeeId : String
  - date : DateTime
  - checkIn : DateTime?
  - checkOut : DateTime?
  - status : String
  - workHours : Float
  - overtimeHours : Float
  - notes : String?
  - createdAt : DateTime
  - updatedAt : DateTime
  - employee : Employee
  --
  {static} @@unique([tenantId, employeeId, date])
  }
  class AttendanceReport {
  - id : String <<PK>>
  - tenantId : String
  - employeeId : String
  - reportDate : DateTime
  - month : Int
  - year : Int
  - totalWorkingDays : Int
  - presentDays : Int
  - absentDays : Int
  - leaveDays : Int
  - halfDays : Int
  - workFromHomeDays : Int
  - totalWorkHours : Float
  - totalOvertimeHours : Float
  - attendancePercentage : Float
  - status : String
  - notes : String?
  - createdAt : DateTime
  - updatedAt : DateTime
  - employee : Employee
  --
  {static} @@unique([tenantId, employeeId, month, year])
  }
  class Employee {
  - id : String <<PK>>
  - tenantId : String
  - userId : String <<UQ>>
  - departmentId : String
  - managerId : String?
  - employeeCode : String
  - name : String
  - email : String
  - phone : String?
  - designation : String
  - joiningDate : DateTime
  - status : String
  - createdAt : DateTime
  - user : User
  - department : Department
  - manager : Employee?
  - reports : Employee[]
  - expenseClaims : ExpenseClaim[]
  - LeaveRequest : LeaveRequest[]
  - tasks : Task[]
  - assignedTasks : Task[]
  - salaryStructure : SalaryStructure?
  - workReports : WorkReport[]
  - notifications : Notification[]
  - payslips : Payslip[]
  - disbursements : SalaryDisbursement[]
  - attendance : Attendance[]
  - shiftAssignments : ShiftAssignment[]
  - timeTracking : TimeTracking[]
  - overtimeRecords : OvertimeRecord[]
  - attendanceReports : AttendanceReport[]
  - leaveIntegrations : LeaveIntegration[]
  - assetAllocations : AssetAllocation[]
  }
  class LeaveIntegration {
  - id : String <<PK>>
  - tenantId : String
  - leaveRequestId : String
  - employeeId : String
  - leaveDate : DateTime
  - status : String
  - attendanceStatus : String
  - createdAt : DateTime
  - updatedAt : DateTime
  - employee : Employee
  --
  {static} @@unique([tenantId, leaveRequestId, leaveDate])
  }
  class LeaveRequest {
  - id : String <<PK>>
  - tenantId : String
  - employeeId : String
  - leaveTypeId : String
  - startDate : DateTime
  - endDate : DateTime
  - reason : String
  - status : String
  - createdAt : DateTime
  - employee : Employee
  - leaveType : LeaveType
  }
  class LeaveType {
  - id : String <<PK>>
  - tenantId : String
  - name : String
  - code : String
  - maxDays : Int
  - paid : Boolean
  - requiresApproval : Boolean
  - createdAt : DateTime
  - leaveRequests : LeaveRequest[]
  }
  class OvertimePolicy {
  - id : String <<PK>>
  - tenantId : String
  - shiftId : String?
  - name : String
  - code : String
  - dailyThreshold : Float
  - weeklyThreshold : Float
  - monthlyThreshold : Float?
  - overtimeRate : Float
  - weekendRate : Float
  - holidayRate : Float
  - isActive : Boolean
  - description : String?
  - createdAt : DateTime
  - updatedAt : DateTime
  - shift : Shift?
  - overtimeRecords : OvertimeRecord[]
  --
  {static} @@unique([tenantId, code])
  }
  class OvertimeRecord {
  - id : String <<PK>>
  - tenantId : String
  - employeeId : String
  - overtimePolicyId : String
  - date : DateTime
  - overtimeHours : Float
  - overtimeRate : Float
  - overtimeAmount : Float
  - reason : String?
  - approvalStatus : String
  - approvedBy : String?
  - approvedAt : DateTime?
  - createdAt : DateTime
  - updatedAt : DateTime
  - employee : Employee
  - overtimePolicy : OvertimePolicy
  }
  class PayrollCycle {
  - id : String <<PK>>
  - tenantId : String
  - name : String
  - startDate : DateTime
  - endDate : DateTime
  - paymentDate : DateTime
  - status : String
  - totalGross : Float
  - totalDeductions : Float
  - totalNet : Float
  - processedBy : String?
  - processedAt : DateTime?
  - notes : String?
  - createdAt : DateTime
  - updatedAt : DateTime
  - payslips : Payslip[]
  - disbursements : SalaryDisbursement[]
  }
  class Payslip {
  - id : String <<PK>>
  - tenantId : String
  - employeeId : String
  - payrollCycleId : String
  - payslipNumber : String <<UQ>>
  - basicSalary : Float
  - allowances : Json?
  - bonuses : Float
  - overtime : Float
  - grossSalary : Float
  - taxDeductions : Float
  - providentFund : Float
  - insurance : Float
  - otherDeductions : Json?
  - totalDeductions : Float
  - netSalary : Float
  - workingDays : Int
  - presentDays : Float
  - absentDays : Float
  - leaveDays : Int
  - overtimeHours : Float
  - status : String
  - generatedAt : DateTime
  - approvedBy : String?
  - approvedAt : DateTime?
  - notes : String?
  - createdAt : DateTime
  - updatedAt : DateTime
  - employee : Employee
  - payrollCycle : PayrollCycle
  }
  class SalaryComponent {
  - id : String <<PK>>
  - tenantId : String
  - name : String
  - code : String
  - type : String
  - calculationType : String
  - value : Float?
  - formula : String?
  - isTaxable : Boolean
  - isActive : Boolean
  - description : String?
  - createdAt : DateTime
  - updatedAt : DateTime
  --
  {static} @@unique([tenantId, code])
  }
  class SalaryDisbursement {
  - id : String <<PK>>
  - tenantId : String
  - payrollCycleId : String
  - employeeId : String
  - amount : Float
  - paymentMethod : String
  - bankAccount : String?
  - transactionRef : String?
  - status : String
  - paymentDate : DateTime?
  - completedAt : DateTime?
  - failureReason : String?
  - notes : String?
  - createdAt : DateTime
  - updatedAt : DateTime
  - payrollCycle : PayrollCycle
  - employee : Employee
  }
  class SalaryStructure {
  - id : String <<PK>>
  - tenantId : String
  - employeeId : String <<UQ>>
  - basicSalary : Float
  - allowances : Json
  - deductions : Json
  - netSalary : Float
  - effectiveFrom : DateTime
  - createdAt : DateTime
  - updatedAt : DateTime
  - employee : Employee
  }
  class Shift {
  - id : String <<PK>>
  - tenantId : String
  - name : String
  - code : String
  - startTime : String
  - endTime : String
  - breakDuration : Int
  - workingDays : String
  - isActive : Boolean
  - description : String?
  - createdAt : DateTime
  - updatedAt : DateTime
  - shiftAssignments : ShiftAssignment[]
  - overtimePolicies : OvertimePolicy[]
  --
  {static} @@unique([tenantId, code])
  }
  class ShiftAssignment {
  - id : String <<PK>>
  - tenantId : String
  - employeeId : String
  - shiftId : String
  - assignedFrom : DateTime
  - assignedTo : DateTime?
  - status : String
  - createdAt : DateTime
  - updatedAt : DateTime
  - employee : Employee
  - shift : Shift
  --
  {static} @@unique([tenantId, employeeId, shiftId, assignedFrom])
  }
  class Task {
  - id : String <<PK>>
  - tenantId : String
  - employeeId : String
  - assignedBy : String
  - title : String
  - description : String
  - priority : String
  - status : String
  - dueDate : DateTime?
  - createdAt : DateTime
  - updatedAt : DateTime
  - employee : Employee
  - assigner : Employee
  - reports : WorkReport[]
  }
  class TaxConfiguration {
  - id : String <<PK>>
  - tenantId : String
  - name : String
  - taxType : String
  - slabs : Json
  - deductionRules : Json?
  - isActive : Boolean
  - effectiveFrom : DateTime
  - effectiveTo : DateTime?
  - createdAt : DateTime
  - updatedAt : DateTime
  --
  {static} @@unique([tenantId, taxType, effectiveFrom])
  }
  class TimeTracking {
  - id : String <<PK>>
  - tenantId : String
  - employeeId : String
  - date : DateTime
  - checkInTime : DateTime
  - checkOutTime : DateTime?
  - checkInLocation : String?
  - checkOutLocation : String?
  - workHours : Float
  - breakHours : Float
  - status : String
  - isLate : Boolean
  - notes : String?
  - createdAt : DateTime
  - updatedAt : DateTime
  - employee : Employee
  --
  {static} @@unique([tenantId, employeeId, date, checkInTime])
  }
  class WorkReport {
  - id : String <<PK>>
  - tenantId : String
  - employeeId : String
  - taskId : String?
  - title : String
  - description : String
  - workDate : DateTime
  - hoursSpent : Float?
  - attachments : Json?
  - createdAt : DateTime
  - employee : Employee
  - task : Task?
  }
}

' Internal relationships for module: HR and Payroll
Employee "1" --> "0..1" Employee : manager {EmployeeManager}
Employee "1" --> "*" Employee : reports {EmployeeManager}
Employee "1" --> "*" LeaveRequest : LeaveRequest
Employee "1" --> "*" Task : tasks
Employee "1" --> "*" Task : assignedTasks {TaskAssigner}
Employee "1" --> "0..1" SalaryStructure : salaryStructure
Employee "1" --> "*" WorkReport : workReports
Employee "1" --> "*" Payslip : payslips
Employee "1" --> "*" SalaryDisbursement : disbursements
Employee "1" --> "*" Attendance : attendance
Employee "1" --> "*" ShiftAssignment : shiftAssignments
Employee "1" --> "*" TimeTracking : timeTracking
Employee "1" --> "*" OvertimeRecord : overtimeRecords {EmployeeOvertime}
Employee "1" --> "*" AttendanceReport : attendanceReports {EmployeeAttendanceReport}
Employee "1" --> "*" LeaveIntegration : leaveIntegrations {EmployeeLeaveIntegration}
LeaveType "1" --> "*" LeaveRequest : leaveRequests
LeaveRequest "1" --> "1" Employee : employee
LeaveRequest "1" --> "1" LeaveType : leaveType
Task "1" --> "1" Employee : employee
Task "1" --> "1" Employee : assigner {TaskAssigner}
Task "1" --> "*" WorkReport : reports
SalaryStructure "1" --> "1" Employee : employee
WorkReport "1" --> "1" Employee : employee
WorkReport "1" --> "0..1" Task : task
Attendance "1" --> "1" Employee : employee
PayrollCycle "1" --> "*" Payslip : payslips
PayrollCycle "1" --> "*" SalaryDisbursement : disbursements
Payslip "1" --> "1" Employee : employee
Payslip "1" --> "1" PayrollCycle : payrollCycle
SalaryDisbursement "1" --> "1" PayrollCycle : payrollCycle
SalaryDisbursement "1" --> "1" Employee : employee
Shift "1" --> "*" ShiftAssignment : shiftAssignments
Shift "1" --> "*" OvertimePolicy : overtimePolicies
ShiftAssignment "1" --> "1" Employee : employee
ShiftAssignment "1" --> "1" Shift : shift
TimeTracking "1" --> "1" Employee : employee
OvertimePolicy "1" --> "0..1" Shift : shift
OvertimePolicy "1" --> "*" OvertimeRecord : overtimeRecords
OvertimeRecord "1" --> "1" Employee : employee {EmployeeOvertime}
OvertimeRecord "1" --> "1" OvertimePolicy : overtimePolicy
AttendanceReport "1" --> "1" Employee : employee {EmployeeAttendanceReport}
LeaveIntegration "1" --> "1" Employee : employee {EmployeeLeaveIntegration}
@enduml
